es-data-statefulset.yml
apiVersion: "apps/v1beta1"
kind: StatefulSet
metadata:
  name: es-data
spec:
  serviceName: es-data
  replicas: 2
  template:
    metadata:
      labels:
        k8s-app: es-data
        component: elasticsearch
        role: data
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
        # see https://www.elastic.co/guide/en/elasticsearch/reference/current/vm-max-map-count.html
        # and https://www.elastic.co/guide/en/elasticsearch/reference/current/setup-configuration-memory.html#mlockall
        pod.alpha.kubernetes.io/init-containers: '[
          {
            "name": "sysctl",
            "image": "busybox",
            "imagePullPolicy": "Always",
            "command": ["sysctl", "-w", "vm.max_map_count=262144"],
            "securityContext": {
              "privileged": true
            }
          }
        ]'
    spec:
      imagePullSecrets:
      - name: suxenkey
      containers:
      - name: es-data
        image: "quay.io/pires/docker-elasticsearch-kubernetes:5.5.0" 
        imagePullPolicy: Always
        ports:
        - containerPort: 9200
          name: db
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        resources:
          limits:
            cpu: "1000m"
            memory: 3Gi
          requests:
           cpu: "1000m"
           memory: 2Gi
        securityContext:
          privileged: true
          capabilities:
            add:
              - IPC_LOCK
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "PID=$(pidof java) && kill $PID && while ps -p $PID > /dev/null; do sleep 1; done"]
        readinessProbe:
          httpGet:
            path: /_cluster/health?local=true
            port: 9200
          initialDelaySeconds: 5
        volumeMounts:
        - name: es-data 
          mountPath: /data
  # These are converted to volume claims by the controller
  # and mounted at the paths mentioned above.
  # do not use these in production until ssd GCEPersistentDisk or other ssd pd
  volumeClaimTemplates:
  - metadata:
      name: es-data
      annotations:
        volume.beta.kubernetes.io/storage-class: gluster-heketi
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Gi
