es-master-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: es-master
  labels:
    component: elasticsearch
    role: master
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: elasticsearch
        role: master
      annotations:
        # see https://www.elastic.co/guide/en/elasticsearch/reference/current/vm-max-map-count.html
        # and https://www.elastic.co/guide/en/elasticsearch/reference/current/setup-configuration-memory.html#mlockall
        pod.alpha.kubernetes.io/init-containers: '[
          {
            "name": "sysctl",
            "image": "busybox",
            "imagePullPolicy": "Always",
            "command": ["sysctl", "-w", "vm.max_map_count=262144"],
            "securityContext": {
              "privileged": true
            }
          }
        ]'
    spec:
      serviceAccount: wso2am 
      imagePullSecrets:
      - name: suxenkey
      containers:
      - name: es-master 
        imagePullPolicy: Always
        image: quay.io/pires/docker-elasticsearch-kubernetes:5.5.0 
        resources:
          limits:
            cpu: "1000m"
            memory: 3Gi
          requests:
           cpu: "1000m"
           memory: 2Gi
        securityContext:
           privileged: true
        readinessProbe:
          httpGet:
            path: /_cluster/health?local=true
            port: 9200
          initialDelaySeconds: 5
        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: storage
      volumes:
      - name: storage
        emptyDir: {}
