kibana-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana-logging
  labels:
    k8s-app: kibana-logging
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kibana-logging
  template:
    metadata:
      labels:
        k8s-app: kibana-logging
    spec:
      containers:
      - name: kibana-logging
        image: gcr.io/google_containers/kibana:v5.4.0 
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 600m
          requests:
            cpu: 500m
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port:  5601 
          initialDelaySeconds: 20
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 5601 
          initialDelaySeconds: 15
          periodSeconds: 10
