kibana-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress 
  namespace: default
spec:
  rules:
  - host: "kibana.example.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-logging 
          servicePort: 5601
